@@ -1,11 +1,15 @@
 /*
- * $Id: ChangeLog,v 1.640 2010-03-06 02:55:10 guerra000 Exp $
+ * $Id: ChangeLog,v 1.641 2010-03-08 03:39:40 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2010-03-07 21:38 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_image.c
+    ! Fixed loading ICON images.
 
 2010-03-05 21:02 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_browse.prg
